force-app/main/default/objects/PumpStation__c/fields/SewerSludgeTreatment2__c.field-meta.xml
<CustomField>
    <fullName>SewerSludgeTreatment2__c</fullName>
    <description>下水の汚泥処理2</description>
    <label>汚泥処理2</label>
    <type>TextArea</type>
</CustomField>