force-app/main/default/objects/PumpStation__c/fields/SewerSludgeTreatmentDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>SewerSludgeTreatmentDeliveryYear__c</fullName>
    <description>下水の汚泥処理1　納入年度</description>
    <label>汚泥処理1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>