force-app/main/default/objects/PumpStation__c/fields/SewerSludgeTreatmentRemarks1__c.field-meta.xml
<CustomField>
    <fullName>SewerSludgeTreatmentRemarks1__c</fullName>
    <description>下水の汚泥処理1　備考</description>
    <label>汚泥処理1　備考</label>
    <type>TextArea</type>
</CustomField>