force-app/main/default/objects/PumpStation__c/fields/SewerSludgeTreatmentRemarks2__c.field-meta.xml
<CustomField>
    <fullName>SewerSludgeTreatmentRemarks2__c</fullName>
    <description>下水の汚泥処理2　備考</description>
    <label>汚泥処理2　備考</label>
    <type>TextArea</type>
</CustomField>