force-app/main/default/objects/PumpStation__c/fields/SewerSupervisoryControl1Name__c.field-meta.xml
<CustomField>
    <fullName>SewerSupervisoryControl1Name__c</fullName>
    <formula>SewerSupervisoryControl1__r.Name</formula>
    <label>下水監視制御1</label>
    <type>Text</type>
</CustomField>