force-app/main/default/objects/PumpStation__c/fields/SewerSupervisoryControl2__c.field-meta.xml
<CustomField>
    <fullName>SewerSupervisoryControl2__c</fullName>
    <description>下水の監視制御2</description>
    <label>下水監視制御2</label>
    <type>TextArea</type>
</CustomField>