force-app/main/default/objects/PumpStation__c/fields/SewerSupervisoryControlDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>SewerSupervisoryControlDeliveryYear__c</fullName>
    <description>下水の監視制御1　納入年度</description>
    <label>下水監視制御1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>