force-app/main/default/objects/PumpStation__c/fields/SewerSupervisoryControlRemark1__c.field-meta.xml
<CustomField>
    <fullName>SewerSupervisoryControlRemark1__c</fullName>
    <description>下水の監視制御1　備考</description>
    <label>下水監視制御1　備考</label>
    <type>TextArea</type>
</CustomField>