force-app/main/default/objects/PumpStation__c/fields/SewerSupervisoryControlRemark2__c.field-meta.xml
<CustomField>
    <fullName>SewerSupervisoryControlRemark2__c</fullName>
    <description>下水の監視制御2　備考</description>
    <label>下水監視制御2　備考</label>
    <type>TextArea</type>
</CustomField>