force-app/main/default/objects/PumpStation__c/fields/SewerTreatment2__c.field-meta.xml
<CustomField>
    <fullName>SewerTreatment2__c</fullName>
    <description>下水の水処理2</description>
    <label>水処理2</label>
    <type>TextArea</type>
</CustomField>