force-app/main/default/objects/PumpStation__c/fields/SewerTreatmentDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>SewerTreatmentDeliveryYear__c</fullName>
    <description>下水の水処理1　納入年度</description>
    <label>水処理1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>