force-app/main/default/objects/PumpStation__c/fields/SewerTreatmentRemarks1__c.field-meta.xml
<CustomField>
    <fullName>SewerTreatmentRemarks1__c</fullName>
    <description>下水の水処理1　備考</description>
    <label>水処理1　備考</label>
    <type>TextArea</type>
</CustomField>