force-app/main/default/objects/PumpStation__c/fields/SewerTreatmentRemarks2__c.field-meta.xml
<CustomField>
    <fullName>SewerTreatmentRemarks2__c</fullName>
    <description>下水の水処理2　備考</description>
    <label>水処理2　備考</label>
    <type>TextArea</type>
</CustomField>