force-app/main/default/objects/PumpStation__c/fields/WaterSupplyAbility__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyAbility__c</fullName>
    <label>施設能力：J（㎥／日）計画揚水量：P（㎥/分）</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>