force-app/main/default/objects/PumpStation__c/fields/WaterSupplyBusinessEntity__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyBusinessEntity__c</fullName>
    <label>事業主体</label>
    <type>TextArea</type>
</CustomField>