force-app/main/default/objects/PumpStation__c/fields/WaterSupplyChemicalFeeding1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyChemicalFeeding1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>上水の薬注1</description>
    <label>薬注1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (薬注1)</relationshipLabel>
    <relationshipName>PumpStaWaterSupplyChemicalFeeding1List</relationshipName>
    <type>Lookup</type>
</CustomField>