force-app/main/default/objects/PumpStation__c/fields/WaterSupplyChemicalFeeding2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyChemicalFeeding2__c</fullName>
    <description>上水の薬注2</description>
    <label>薬注2</label>
    <type>TextArea</type>
</CustomField>