force-app/main/default/objects/PumpStation__c/fields/WaterSupplyChemicalFeedingDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyChemicalFeedingDeliveryYear__c</fullName>
    <description>上水の薬注1　納入年度</description>
    <label>薬注1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>