force-app/main/default/objects/PumpStation__c/fields/WaterSupplyChemicalFeedingRemarks1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyChemicalFeedingRemarks1__c</fullName>
    <description>上水の薬注1　備考</description>
    <label>薬注1　備考</label>
    <type>TextArea</type>
</CustomField>