force-app/main/default/objects/PumpStation__c/fields/WaterSupplyChemicalFeedingRemarks2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyChemicalFeedingRemarks2__c</fullName>
    <description>上水の薬注2　備考</description>
    <label>薬注2　備考</label>
    <type>TextArea</type>
</CustomField>