force-app/main/default/objects/PumpStation__c/fields/WaterSupplyCivilEngWork2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyCivilEngWork2__c</fullName>
    <description>上水の土木2</description>
    <label>上水土木2</label>
    <type>TextArea</type>
</CustomField>