force-app/main/default/objects/PumpStation__c/fields/WaterSupplyCivilEngWorkRemarks1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyCivilEngWorkRemarks1__c</fullName>
    <description>上水の土木1　備考</description>
    <label>上水土木1　備考</label>
    <type>TextArea</type>
</CustomField>