force-app/main/default/objects/PumpStation__c/fields/WaterSupplyCivilEngWorkRemarks2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyCivilEngWorkRemarks2__c</fullName>
    <description>上水の土木2　備考</description>
    <label>上水土木2　備考</label>
    <type>TextArea</type>
</CustomField>