force-app/main/default/objects/PumpStation__c/fields/WaterSupplyConcentrator1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyConcentrator1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>上水の濃縮1</description>
    <label>濃縮1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (濃縮1)</relationshipLabel>
    <relationshipName>PumpStaWaterSupplyConcentrator1List</relationshipName>
    <type>Lookup</type>
</CustomField>