force-app/main/default/objects/PumpStation__c/fields/WaterSupplyConcentrator2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyConcentrator2__c</fullName>
    <description>上水の濃縮2</description>
    <label>濃縮2</label>
    <type>TextArea</type>
</CustomField>