force-app/main/default/objects/PumpStation__c/fields/WaterSupplyConcentratorDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyConcentratorDeliveryYear__c</fullName>
    <description>上水の濃縮1　納入年度</description>
    <label>濃縮1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>