force-app/main/default/objects/PumpStation__c/fields/WaterSupplyConcentratorRemarks1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyConcentratorRemarks1__c</fullName>
    <description>上水の濃縮1　備考</description>
    <label>濃縮1　備考</label>
    <type>TextArea</type>
</CustomField>