force-app/main/default/objects/PumpStation__c/fields/WaterSupplyConcentratorRemarks2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyConcentratorRemarks2__c</fullName>
    <description>上水の濃縮2　備考</description>
    <label>濃縮2　備考</label>
    <type>TextArea</type>
</CustomField>