force-app/main/default/objects/PumpStation__c/fields/WaterSupplyConveyingPump1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyConveyingPump1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>上水の送配水ポンプ1</description>
    <label>送配水ポンプ1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (送配水ポンプ1)</relationshipLabel>
    <relationshipName>PumpStaWaterSupplyConveyingPump1List</relationshipName>
    <type>Lookup</type>
</CustomField>