force-app/main/default/objects/PumpStation__c/fields/WaterSupplyConveyingPump2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyConveyingPump2__c</fullName>
    <description>上水の送配水ポンプ2</description>
    <label>送配水ポンプ2</label>
    <type>TextArea</type>
</CustomField>