force-app/main/default/objects/PumpStation__c/fields/WaterSupplyConveyingPumpDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyConveyingPumpDeliveryYear__c</fullName>
    <description>上水の送配水ポンプ1　納入年度</description>
    <label>送配水ポンプ1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>