force-app/main/default/objects/PumpStation__c/fields/WaterSupplyConveyingPumpRemarks1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyConveyingPumpRemarks1__c</fullName>
    <description>上水の送配水ポンプ1　備考</description>
    <label>送配水ポンプ1　備考</label>
    <type>TextArea</type>
</CustomField>