force-app/main/default/objects/PumpStation__c/fields/WaterSupplyConveyingPumpRemarks2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyConveyingPumpRemarks2__c</fullName>
    <description>上水の送配水ポンプ2　備考</description>
    <label>送配水ポンプ2　備考</label>
    <type>TextArea</type>
</CustomField>