force-app/main/default/objects/PumpStation__c/fields/WaterSupplyDehydrator1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyDehydrator1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>上水の脱水1</description>
    <label>脱水1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (脱水1)</relationshipLabel>
    <relationshipName>PumpStaWaterSupplyDehydrator1List</relationshipName>
    <type>Lookup</type>
</CustomField>