force-app/main/default/objects/PumpStation__c/fields/WaterSupplyDehydrator2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyDehydrator2__c</fullName>
    <description>上水の脱水2</description>
    <label>脱水2</label>
    <type>TextArea</type>
</CustomField>