force-app/main/default/objects/PumpStation__c/fields/WaterSupplyDehydratorDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyDehydratorDeliveryYear__c</fullName>
    <description>上水の脱水1　納入年度</description>
    <label>脱水1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>