force-app/main/default/objects/PumpStation__c/fields/WaterSupplyDehydratorRemarks1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyDehydratorRemarks1__c</fullName>
    <description>上水の脱水1　備考</description>
    <label>脱水1　備考</label>
    <type>TextArea</type>
</CustomField>