force-app/main/default/objects/PumpStation__c/fields/WaterSupplyDehydratorRemarks2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyDehydratorRemarks2__c</fullName>
    <description>上水の脱水2　備考</description>
    <label>脱水2　備考</label>
    <type>TextArea</type>
</CustomField>