force-app/main/default/objects/PumpStation__c/fields/WaterSupplyDesignConsul1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyDesignConsul1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>上水の設計コンサル1</description>
    <label>上水設計コンサル1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (上水設計コンサル)</relationshipLabel>
    <relationshipName>PumpStaWaterSupplyDesignConsul1List</relationshipName>
    <type>Lookup</type>
</CustomField>