force-app/main/default/objects/PumpStation__c/fields/WaterSupplyDesignConsul2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyDesignConsul2__c</fullName>
    <description>上水の設計コンサル2</description>
    <label>上水設計コンサル2</label>
    <type>TextArea</type>
</CustomField>