force-app/main/default/objects/PumpStation__c/fields/WaterSupplyDesignConsulRemarks1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyDesignConsulRemarks1__c</fullName>
    <description>上水の設計コンサル1　備考</description>
    <label>上水設計コンサル1　備考</label>
    <type>TextArea</type>
</CustomField>