force-app/main/default/objects/PumpStation__c/fields/WaterSupplyDesignConsulRemarks2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyDesignConsulRemarks2__c</fullName>
    <description>上水の設計コンサル2　備考</description>
    <label>上水設計コンサル2　備考</label>
    <type>TextArea</type>
</CustomField>