force-app/main/default/objects/PumpStation__c/fields/WaterSupplyDistantControl1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyDistantControl1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>上水の遠制1</description>
    <label>上水遠制1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (遠制1)</relationshipLabel>
    <relationshipName>PumpStaWaterSupplyDistantControl1List</relationshipName>
    <type>Lookup</type>
</CustomField>