force-app/main/default/objects/PumpStation__c/fields/WaterSupplyDistantControl2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyDistantControl2__c</fullName>
    <description>上水の遠制2</description>
    <label>上水遠制2</label>
    <type>TextArea</type>
</CustomField>