force-app/main/default/objects/PumpStation__c/fields/WaterSupplyDistantControlRemarks1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyDistantControlRemarks1__c</fullName>
    <description>上水の遠制1　備考</description>
    <label>上水遠制1　備考</label>
    <type>TextArea</type>
</CustomField>