force-app/main/default/objects/PumpStation__c/fields/WaterSupplyDistantControlRemarks2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyDistantControlRemarks2__c</fullName>
    <description>上水の遠制2　備考</description>
    <label>上水遠制2　備考</label>
    <type>TextArea</type>
</CustomField>