force-app/main/default/objects/PumpStation__c/fields/WaterSupplyDistantDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyDistantDeliveryYear__c</fullName>
    <description>上水の遠制1　納入年度</description>
    <label>上水遠制1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>