force-app/main/default/objects/PumpStation__c/fields/WaterSupplyEffluentDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyEffluentDeliveryYear__c</fullName>
    <description>上水の動力・排水処理1　納入年度</description>
    <label>動力・排水処理1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>