force-app/main/default/objects/PumpStation__c/fields/WaterSupplyEffluentTreat2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyEffluentTreat2__c</fullName>
    <description>上水の動力・排水処理2</description>
    <label>動力・排水処理2</label>
    <type>TextArea</type>
</CustomField>