force-app/main/default/objects/PumpStation__c/fields/WaterSupplyEffluentTreatRemarks1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyEffluentTreatRemarks1__c</fullName>
    <description>上水の動力・排水処理1　備考</description>
    <label>動力・排水処理1　備考</label>
    <type>TextArea</type>
</CustomField>