force-app/main/default/objects/PumpStation__c/fields/WaterSupplyEffluentTreatRemarks2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyEffluentTreatRemarks2__c</fullName>
    <description>上水の動力・排水処理2　備考</description>
    <label>動力・排水処理2　備考</label>
    <type>TextArea</type>
</CustomField>