force-app/main/default/objects/PumpStation__c/fields/WaterSupplyExtraHighDelivery2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyExtraHighDelivery2__c</fullName>
    <description>上水の特高受配2</description>
    <label>上水特高受配2</label>
    <type>TextArea</type>
</CustomField>