force-app/main/default/objects/PumpStation__c/fields/WaterSupplyExtraHighDeliveryRemarks1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyExtraHighDeliveryRemarks1__c</fullName>
    <description>上水の特高受配1　備考</description>
    <label>上水特高受配1　備考</label>
    <type>TextArea</type>
</CustomField>