force-app/main/default/objects/PumpStation__c/fields/WaterSupplyExtraHighDeliveryRemarks2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyExtraHighDeliveryRemarks2__c</fullName>
    <description>上水の特高受配2　備考</description>
    <label>上水特高受配2　備考</label>
    <type>TextArea</type>
</CustomField>