force-app/main/default/objects/PumpStation__c/fields/WaterSupplyExtraHighDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyExtraHighDeliveryYear__c</fullName>
    <description>上水の特高受配1　納入年度</description>
    <label>上水特高受配1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>