force-app/main/default/objects/PumpStation__c/fields/WaterSupplyFiltration1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyFiltration1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>上水のろ過（膜含）1</description>
    <label>ろ過（膜含）1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (ろ過（膜含）1)</relationshipLabel>
    <relationshipName>PumpStaWaterSupplyFiltration1List</relationshipName>
    <type>Lookup</type>
</CustomField>