force-app/main/default/objects/PumpStation__c/fields/WaterSupplyFiltration2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyFiltration2__c</fullName>
    <description>上水のろ過（膜含）2</description>
    <label>ろ過（膜含）2</label>
    <type>TextArea</type>
</CustomField>