force-app/main/default/objects/PumpStation__c/fields/WaterSupplyFiltrationDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyFiltrationDeliveryYear__c</fullName>
    <description>上水のろ過（膜含）1　納入年度</description>
    <label>ろ過（膜含）1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>