force-app/main/default/objects/PumpStation__c/fields/WaterSupplyFiltrationRemarks1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyFiltrationRemarks1__c</fullName>
    <description>上水のろ過（膜含）1　備考</description>
    <label>ろ過（膜含）1　備考</label>
    <type>TextArea</type>
</CustomField>