force-app/main/default/objects/PumpStation__c/fields/WaterSupplyGenerator2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyGenerator2__c</fullName>
    <description>上水の自家発2</description>
    <label>上水自家発2</label>
    <type>TextArea</type>
</CustomField>