force-app/main/default/objects/PumpStation__c/fields/WaterSupplyGeneratorDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyGeneratorDeliveryYear__c</fullName>
    <description>上水の自家発1　納入年度</description>
    <label>上水自家発1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>