force-app/main/default/objects/PumpStation__c/fields/WaterSupplyGeneratorRemarks1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyGeneratorRemarks1__c</fullName>
    <description>上水の自家発1　備考</description>
    <label>上水自家発1　備考</label>
    <type>TextArea</type>
</CustomField>