force-app/main/default/objects/PumpStation__c/fields/WaterSupplyGeneratorRemarks2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyGeneratorRemarks2__c</fullName>
    <description>上水の自家発2　備考</description>
    <label>上水自家発2　備考</label>
    <type>TextArea</type>
</CustomField>