force-app/main/default/objects/PumpStation__c/fields/WaterSupplyHighDelivery1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyHighDelivery1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>上水の高圧受配1</description>
    <label>上水高圧受配1</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>事業所</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>機場 (高圧受配1)</relationshipLabel>
    <relationshipName>PumpStaWaterSupplyHighDelivery1List</relationshipName>
    <type>Lookup</type>
</CustomField>