force-app/main/default/objects/PumpStation__c/fields/WaterSupplyHighDelivery2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyHighDelivery2__c</fullName>
    <description>上水の高圧受配2</description>
    <label>上水高圧受配2</label>
    <type>TextArea</type>
</CustomField>