force-app/main/default/objects/PumpStation__c/fields/WaterSupplyHighDeliveryRemarks1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyHighDeliveryRemarks1__c</fullName>
    <description>上水の高圧受配1　備考</description>
    <label>上水高圧受配1　備考</label>
    <type>TextArea</type>
</CustomField>