force-app/main/default/objects/PumpStation__c/fields/WaterSupplyHighDeliveryRemarks2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyHighDeliveryRemarks2__c</fullName>
    <description>上水の高圧受配2　備考</description>
    <label>上水高圧受配2　備考</label>
    <type>TextArea</type>
</CustomField>