force-app/main/default/objects/PumpStation__c/fields/WaterSupplyHighDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyHighDeliveryYear__c</fullName>
    <description>上水の高圧受配1　納入年度</description>
    <label>上水高圧受配1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>