force-app/main/default/objects/PumpStation__c/fields/WaterSupplyOnboardCategory__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyOnboardCategory__c</fullName>
    <description>水環境BU管理項目の機場カテゴリ</description>
    <inlineHelpText>水環境BU機場カテゴリの定義
・カテゴリA：中央監視設備と中央監視設備以外の設備を一つ以上納入している機場
・カテゴリB：中央監視設備のみ、又は中央監視設備以外の設備を一つ以上納入している機場
・カテゴリC：新設・他社機場</inlineHelpText>
    <label>機場カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>A（既設機場）</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>B（混合機場）</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C（他社機場）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>