force-app/main/default/objects/PumpStation__c/fields/WaterSupplyOperateManage2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyOperateManage2__c</fullName>
    <description>上水の運転管理2</description>
    <label>上水運転管理2</label>
    <type>TextArea</type>
</CustomField>