force-app/main/default/objects/PumpStation__c/fields/WaterSupplyOperateManageRemarks1__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyOperateManageRemarks1__c</fullName>
    <description>上水の運転管理1　備考</description>
    <label>上水運転管理1　備考</label>
    <type>TextArea</type>
</CustomField>