force-app/main/default/objects/PumpStation__c/fields/WaterSupplyOperateManageRemarks2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyOperateManageRemarks2__c</fullName>
    <description>上水の運転管理2　備考</description>
    <label>上水運転管理2　備考</label>
    <type>TextArea</type>
</CustomField>