force-app/main/default/objects/PumpStation__c/fields/WaterSupplyOther__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyOther__c</fullName>
    <description>上水のその他</description>
    <label>上水その他</label>
    <type>TextArea</type>
</CustomField>