force-app/main/default/objects/PumpStation__c/fields/WaterSupplyOzoneDeodrize2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyOzoneDeodrize2__c</fullName>
    <description>上水のオゾン設備（脱臭）2</description>
    <label>上水オゾン設備（脱臭）2</label>
    <type>TextArea</type>
</CustomField>