force-app/main/default/objects/PumpStation__c/fields/WaterSupplyOzoneDeodrizeDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyOzoneDeodrizeDeliveryYear__c</fullName>
    <description>上水のオゾン設備（脱臭）1　納入年度</description>
    <label>上水オゾン設備（脱臭）1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>