force-app/main/default/objects/PumpStation__c/fields/WaterSupplyOzoneDeodrizeRemarks2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyOzoneDeodrizeRemarks2__c</fullName>
    <description>上水のオゾン設備（脱臭）2　備考</description>
    <label>上水オゾン設備（脱臭）2　備考</label>
    <type>TextArea</type>
</CustomField>