force-app/main/default/objects/PumpStation__c/fields/WaterSupplyOzoneGenDeliveryYear__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyOzoneGenDeliveryYear__c</fullName>
    <description>上水のオゾン設備（水処理・高度処理）1　納入年度</description>
    <label>上水オゾン設備（水処理・高度処理）1　納入年度</label>
    <length>4</length>
    <type>Text</type>
</CustomField>