force-app/main/default/objects/PumpStation__c/fields/WaterSupplyOzoneGenRemarks2__c.field-meta.xml
<CustomField>
    <fullName>WaterSupplyOzoneGenRemarks2__c</fullName>
    <description>上水のオゾン設備（水処理・高度処理）2　備考</description>
    <label>上水オゾン設備（水処理・高度処理）2　備考</label>
    <type>TextArea</type>
</CustomField>